# zellij-vertical-tab

./: .gitignore  AGENTS.md  Cargo.toml  DEVELOPMENT.md  README.md  mise.toml  zellij.kdl
docs/: agent-status.md
hooks/claude/: agent_status.py  settings.json  test_agent_status.py
hooks/codex/: agent_notify.py  agent_status.py  hooks.json  status_store.py  test_agent_notify.py  test_agent_status.py  test_status_store.py
hooks/common/: agent_bridge.py  status_store.py  test_agent_bridge.py  test_status_store.py
openspec/changes/acknowledge-agent-status-on-focus/: design.md  tasks.md
openspec/changes/add-agent-status/: proposal.md
openspec/changes/add-tab-name-ellipsis/: proposal.md  tasks.md
openspec/changes/archive/2026-07-17-add-agent-status/: design.md  tasks.md
openspec/changes/archive/2026-07-17-add-tab-name-ellipsis/: design.md
openspec/changes/archive/2026-07-17-improve-agent-status-badges/: proposal.md  tasks.md
openspec/changes/archive/2026-07-17-nest-panes-under-tabs/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-18-add-mouse-resizable-sidebar/: design.md  proposal.md  (+1 more)
openspec/changes/improve-agent-status-badges/: design.md
openspec/changes/recover-working-after-auto-approval/: design.md  proposal.md  tasks.md
openspec/specs/agent-status/: spec.md
openspec/specs/vertical-tab-sidebar/: spec.md
openwiki/: .last-update.json  INSTRUCTIONS.md  architecture.md  development.md  index.md  quickstart.md
scripts/: publish-agent-status  reload-plugin  update-openwiki
src/: main.rs
tasks/: lessons.md  todo.md
(+45 files in other folders)
